--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,18 @@
 }
 
 .list {
+  padding: 0;
+  margin: 0;
   list-style: none;
+}
+
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+  width: 1200px;
+  outline: 2px solid tomato;
 }
 
 /* logo */
@@ -97,10 +108,15 @@
 /* hero */
 
 .hero {
+  text-align: center;
+
   background-color: var(--bg-footer-color);
 }
 
 .hero-title {
+  margin-top: 0;
+  margin-bottom: 30px;
+
   color: var(--primary-white-color);
 
   font-weight: 900;
@@ -109,11 +125,23 @@
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
+  outline: 2px solid tomato;
 }
 
 /* section */
 
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.section.no-padding {
+  padding-top: 0;
+}
+
 .section-title {
+  margin-top: 0;
+  margin-bottom: 50px;
   color: var(--title-text-color);
 
   font-weight: 700;
@@ -125,6 +153,8 @@
 /* about us */
 
 .about-us-list .title {
+  margin-top: 0;
+  margin-bottom: 10px;
   color: var(--title-text-color);
 
   font-weight: 700;
@@ -135,6 +165,9 @@
 }
 
 .about-us-list .text {
+  margin-top: 0;
+  margin-bottom: 0;
+
   font-size: 14px;
   line-height: 1.71;
 }
